# School

./: .gitignore  CMakeLists.txt  README.md  SchoolConfig.h.in  main.cpp
lib/: GeneralGeneticAlgorithmApp.cpp  GeneralGeneticAlgorithmApp.h  KnapsackApp.cpp  KnapsackApp.h
lib/Backpack/: Backpack.cpp  Backpack.h  Item.cpp  Item.h
lib/CustomAlgorithms/Heuristic/GeneticKnapsack/: GeneticAlgorithm.cpp  GeneticAlgorithm.h  Implementation.cpp  Implementation.h  Instance.cpp  Instance.h  Knapsack.cpp  Knapsack.h  KnapsackItem.cpp  KnapsackItem.h  WorkingSet.h
lib/CustomAlgorithms/MetaHeuristic/GeneticAlgorithm/: FitnessCalculator.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Genotype.cpp  Genotype.h  Individual.h  Instances.h  README.md  Settings.cpp  Settings.h
lib/CustomAlgorithms/MetaHeuristic/GeneticKnapsack/: Implementation.h  Instance.cpp  KnapsackItem.cpp  WorkingSet.h
lib/Genetics/: GeneticsAlgorith.cpp  GeneticsAlgorith.h  Instance.cpp  Instance.h
lib/InputValidator/: InputValidationException.cpp  InputValidationException.h  InputValidator.cpp  InputValidator.h
lib/Macros/: GETSET.cpp  GETSET.h
lib/RandomWrapper/: RandomWrapper.cpp  RandomWrapper.h
project/: KnapsackApp.cpp
project/CustomAlgorithms/MetaHeuristic/GeneticAlgorithm/: Instances.cpp  Instances.h
project/CustomAlgorithms/MetaHeuristic/GeneticKnapsack/: GeneticAlgorithm.cpp  GeneticAlgorithm.h  Implementation.cpp  WorkingSet.cpp
project/GeneticAlgorithm/: CMakeLists.txt  Fitness.cpp  Fitness.h  Gene.cpp  Gene.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Individual.cpp  Individual.h  Instance.cpp  Instance.h  Instances.h  Problem.cpp  Problem.h  README.md  Settings.h  StopCondition.cpp  StopCondition.h  Unit.cpp  Unit.h
project/GeneticAlgorithm/Test/: Test.cpp
project/GeneticKnapsack/: CMakeLists.txt  GeneticAlgorithm.h  Implementation.h  Knapsack.h  KnapsackItem.h  RandomWrapper.h  WorkingSet.h
project/InputValidator/: CMakeLists.txt  InputValidationException.cpp
project/Macros/: CMakeLists.txt
project/RandomWrapper/: CMakeLists.txt
runnable/: GeneticAlgo.cpp  GeneticKnapsack.cpp
runnable/GeneralGeneticAlgorithm/: GeneticAlgo.cpp  Knapsack.cpp  Knapsack.h
runnable/GeneticKnapsack/: GeneticKnapsack.cpp  KnapsackApp.cpp
test/: Example.gtest.cpp
